fix z-index close

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -798,6 +798,7 @@ a:focus {
   right: 5px;
   opacity: 1;
   color: #fff;
+  z-index: 10;
 }
 
 .modal__close:hover, .modal__close:focus {
