--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -112,6 +112,7 @@ a:focus
     right: 5px
     opacity: 1
     color: #fff  
+    z-index: 10
     &:hover,
     &:focus
       color: $btn_color
